--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ body {
   margin: 100px auto 0;
   border-radius: 10px;
   padding: 30px;
+  box-shadow: 0 8px 32px rgba(0, 0, 0, 0.37);
 }
 .app h1 {
   text-align: center;
